pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front
  labels:
    app: front
spec:
  containers:
    - name: front
      imagePullPolicy: IfNotPresent
      image: edujc/front:latest
      ports:
            - containerPort: 8085
