service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: default
  labels:
    app: front
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8085
  selector:    
    app: front
  type: NodePort
