ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
      


//2 prueba redirect
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress2
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
 
  - http:
      paths:
        - path: /api/
          backend:
            serviceName: back
            servicePort: 8080
